--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,16 @@ name = "sentimenttuning"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.11"
 dependencies = [
     "accelerate>=1.12.0",
+    "causal-conv1d>=1.6.0",
     "datasets>=4.4.2",
+    "mamba-ssm>=2.3.0",
     "peft>=0.18.1",
     "torch>=2.9.1",
-    "transformers>=4.57.5",
+    "transformers==4.45.0",
 ]
+
+[tool.uv.sources]
+transformers = { git = "https://github.com/huggingface/transformers.git" }
